1st section complete

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
                     </div>
                 </nav>
                 </header>
+                <div class="hero">
+                    <div class="overlay"></div> 
+                    <div class="hero-content">
+                        <h1>Grondwerken Pieters</h1>
+                        <p>Your Trusted Partner in Earthworks and Excavations</p>
+                        <a href="#" class="btn">
+                            Explore Groundwerken <span><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.2002 1.0001L10.8002 10.6001" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M10.8002 5.0001V10.6001H5.2002" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                </span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
