2nd section complete

--- a/index.html
+++ b/index.html
@@ -53,7 +53,26 @@
             </div>
         </div>
     </section>
+    <section class="service">
+        <div class="split-container">
+            <div class="split left">
+                <div class="content">
+                </div>
+            </div>
+            <div class="split right">
+                <div class="content">
+                    <h2>Grondwerken Pieters - Precision Earthworks & Excavations</h2>
+                    <p>Building Foundations, Moving Futures.</p>
+                    <a href="#" class="btn-1">Explore Groundwork <span><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.2002 10.6L10.8002 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10.8002 6.6V1H5.2002" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        </span></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
