3rd section complete

--- a/index.html
+++ b/index.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grondwerken Pieters</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/logoimage.png" type="image/x-icon">
 </head>
+
 <body>
     <section>
         <div class="bg-image">
             <div class="container">
                 <header>
-                <nav class="navbar">
-                    <div class="logo">
-                        <img src="./assets/images/logoimage.png" alt="Pieters BV Grondwerken">
-                    </div>
-                    <ul class="nav-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Groundwork</a></li>
-                        <li><a href="#">Transport</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <div class="nav-buttons">
-                        <button class="icon-btn">
-                            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M10.458 20.6145C4.85384 20.6145 0.301758 16.0624 0.301758 10.4583C0.301758 4.85408 4.85384 0.302002 10.458 0.302002C10.8851 0.302002 11.2393 0.656169 11.2393 1.08325C11.2393 1.51034 10.8851 1.8645 10.458 1.8645C5.71842 1.8645 1.86426 5.71867 1.86426 10.4583C1.86426 15.1978 5.71842 19.052 10.458 19.052C15.1976 19.052 19.0518 15.1978 19.0518 10.4583C19.0518 10.0312 19.4059 9.677 19.833 9.677C20.2601 9.677 20.6143 10.0312 20.6143 10.4583C20.6143 16.0624 16.0622 20.6145 10.458 20.6145Z" fill="white"/>
-                                <path d="M19.833 4.9895H13.583C13.1559 4.9895 12.8018 4.63534 12.8018 4.20825C12.8018 3.78117 13.1559 3.427 13.583 3.427H19.833C20.2601 3.427 20.6143 3.78117 20.6143 4.20825C20.6143 4.63534 20.2601 4.9895 19.833 4.9895Z" fill="white"/>
-                                <path d="M16.708 8.1145H13.583C13.1559 8.1145 12.8018 7.76034 12.8018 7.33325C12.8018 6.90617 13.1559 6.552 13.583 6.552H16.708C17.1351 6.552 17.4893 6.90617 17.4893 7.33325C17.4893 7.76034 17.1351 8.1145 16.708 8.1145Z" fill="white"/>
-                                <path d="M20.0005 22.7396C19.9171 22.7396 19.8338 22.7292 19.7609 22.7188C19.2713 22.6563 18.3859 22.3229 17.8859 20.8333C17.6255 20.0521 17.7192 19.2708 18.1463 18.6771C18.5734 18.0833 19.2921 17.75 20.115 17.75C21.1775 17.75 22.0109 18.1562 22.3859 18.875C22.7609 19.5938 22.6567 20.5104 22.063 21.3958C21.3234 22.5104 20.5213 22.7396 20.0005 22.7396ZM19.3755 20.3438C19.5525 20.8854 19.8025 21.1563 19.9692 21.1771C20.1359 21.1979 20.4484 21 20.7713 20.5313C21.0734 20.0833 21.0942 19.7604 21.0213 19.6146C20.9484 19.4688 20.6567 19.3125 20.115 19.3125C19.7921 19.3125 19.5525 19.4167 19.4171 19.5938C19.2921 19.7708 19.2713 20.0417 19.3755 20.3438Z" fill="white"/>
+                    <nav class="navbar">
+                        <div class="logo">
+                            <img src="./assets/images/logoimage.png" alt="Pieters BV Grondwerken">
+                        </div>
+                        <ul class="nav-links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Groundwork</a></li>
+                            <li><a href="#">Transport</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <div class="nav-buttons">
+                            <button class="icon-btn">
+                                <svg width="23" height="23" viewBox="0 0 23 23" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M10.458 20.6145C4.85384 20.6145 0.301758 16.0624 0.301758 10.4583C0.301758 4.85408 4.85384 0.302002 10.458 0.302002C10.8851 0.302002 11.2393 0.656169 11.2393 1.08325C11.2393 1.51034 10.8851 1.8645 10.458 1.8645C5.71842 1.8645 1.86426 5.71867 1.86426 10.4583C1.86426 15.1978 5.71842 19.052 10.458 19.052C15.1976 19.052 19.0518 15.1978 19.0518 10.4583C19.0518 10.0312 19.4059 9.677 19.833 9.677C20.2601 9.677 20.6143 10.0312 20.6143 10.4583C20.6143 16.0624 16.0622 20.6145 10.458 20.6145Z"
+                                        fill="white" />
+                                    <path
+                                        d="M19.833 4.9895H13.583C13.1559 4.9895 12.8018 4.63534 12.8018 4.20825C12.8018 3.78117 13.1559 3.427 13.583 3.427H19.833C20.2601 3.427 20.6143 3.78117 20.6143 4.20825C20.6143 4.63534 20.2601 4.9895 19.833 4.9895Z"
+                                        fill="white" />
+                                    <path
+                                        d="M16.708 8.1145H13.583C13.1559 8.1145 12.8018 7.76034 12.8018 7.33325C12.8018 6.90617 13.1559 6.552 13.583 6.552H16.708C17.1351 6.552 17.4893 6.90617 17.4893 7.33325C17.4893 7.76034 17.1351 8.1145 16.708 8.1145Z"
+                                        fill="white" />
+                                    <path
+                                        d="M20.0005 22.7396C19.9171 22.7396 19.8338 22.7292 19.7609 22.7188C19.2713 22.6563 18.3859 22.3229 17.8859 20.8333C17.6255 20.0521 17.7192 19.2708 18.1463 18.6771C18.5734 18.0833 19.2921 17.75 20.115 17.75C21.1775 17.75 22.0109 18.1562 22.3859 18.875C22.7609 19.5938 22.6567 20.5104 22.063 21.3958C21.3234 22.5104 20.5213 22.7396 20.0005 22.7396ZM19.3755 20.3438C19.5525 20.8854 19.8025 21.1563 19.9692 21.1771C20.1359 21.1979 20.4484 21 20.7713 20.5313C21.0734 20.0833 21.0942 19.7604 21.0213 19.6146C20.9484 19.4688 20.6567 19.3125 20.115 19.3125C19.7921 19.3125 19.5525 19.4167 19.4171 19.5938C19.2921 19.7708 19.2713 20.0417 19.3755 20.3438Z"
+                                        fill="white" />
                                 </svg>
-                                
-                        </button>
-                        <a href="#" class="quote-btn">Free Quote</a>
-                    </div>
-                </nav>
+
+                            </button>
+                            <a href="#" class="quote-btn">Free Quote</a>
+                        </div>
+                    </nav>
                 </header>
                 <div class="hero">
-                    <div class="overlay"></div> 
+                    <div class="overlay"></div>
                     <div class="hero-content">
                         <h1>Grondwerken Pieters</h1>
                         <p>Your Trusted Partner in Earthworks and Excavations</p>
                         <a href="#" class="btn">
-                            Explore Groundwerken <span><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1.2002 1.0001L10.8002 10.6001" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M10.8002 5.0001V10.6001H5.2002" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            Explore Groundwerken <span><svg width="12" height="12" viewBox="0 0 12 12" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.2002 1.0001L10.8002 10.6001" stroke="white" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                    <path d="M10.8002 5.0001V10.6001H5.2002" stroke="white" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
                                 </svg>
-                                </span>
+                            </span>
                         </a>
                     </div>
                 </div>
@@ -63,16 +78,46 @@
                 <div class="content">
                     <h2>Grondwerken Pieters - Precision Earthworks & Excavations</h2>
                     <p>Building Foundations, Moving Futures.</p>
-                    <a href="#" class="btn-1">Explore Groundwork <span><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1.2002 10.6L10.8002 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M10.8002 6.6V1H5.2002" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                    <a href="#" class="btn-1">Explore Groundwork <span><svg width="12" height="12" viewBox="0 0 12 12"
+                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.2002 10.6L10.8002 1" stroke="white" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M10.8002 6.6V1H5.2002" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
                         </span></a>
                 </div>
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="about-us">
+            <div class="container-1">
+                <div class="content-about">
+                    <h3> — About Us</h3>
+                    <h2> Over 10 Years of Experience in Earthworks</h2>
+                    <div class="workers">
+                        <img src="./assets/images/earthworks.png" alt="Earthworks">
+                    </div>
+                </div>
+                <p class="about-text">
+                    Grondwerken Pieters is a family-owned business, passionately run by the Pieters family. We strive to
+                    deliver the best results for our clients, with a strong focus on quality and a personal approach.
+                    Our modern fleet of trucks and machines allows us to carry out every job, big or small, efficiently
+                    & professionally. Our dedicated team of skilled workers is always ready to complete your project
+                    with care and precision, with your satisfaction being our top priority.
+                </p>
+                <div class="factory">
+                    <img src="./assets/images/satisfaction.png" alt="Satisfaction">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gallery-1">
+
+    </section>
 
     <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
