--- a/index.html
+++ b/index.html
@@ -168,11 +168,14 @@
                             </div>
                             <input type="email" name="email" placeholder="Email Address" required>
                             <textarea name="message" rows="5" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn-3"> Send Message <span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1.21211 8.21178H14.7886" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M10.8285 4.25228L14.7883 8.21208L10.8285 12.1719" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg></span>
-                                </button>
+                            <button type="submit" class="btn-3"> Send Message <span><svg width="16" height="16"
+                                        viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.21211 8.21178H14.7886" stroke="white" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M10.8285 4.25228L14.7883 8.21208L10.8285 12.1719" stroke="white"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg></span>
+                            </button>
                         </form>
                     </div>
                 </div>
@@ -180,9 +183,73 @@
         </div>
     </section>
     <section class="quick-links">
-        
-    </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-left">
+                    <div class="footer-logo">
+                        <img src="./assets/images/footerimage.png" alt="Logo">
+                    </div>
+                    <p class="paragraph">Grondwerken Pieters - Your reliable partner for all your earthworks and infrastructure projects.
+                    </p>
+                    <div class="social-icons">
+                        <a href="#"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16 2C8.268 2 2 8.268 2 16C2 22.566 6.52 28.075 12.618 29.588V20.278H9.731V16H12.618V14.157C12.618 9.392 14.774 7.183 19.453 7.183C20.34 7.183 21.87 7.357 22.496 7.531V11.409C22.166 11.374 21.592 11.357 20.879 11.357C18.583 11.357 17.696 12.227 17.696 14.487V16H22.269L21.483 20.278H17.696V29.897C24.628 29.06 30 23.157 30 16C30 8.268 23.732 2 16 2Z" fill="#E58E1A"/>
+                            </svg>
+                             </a>
+                        <a href="#"><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.1175 12.2579L24.4046 2.625H22.4411L15.2451 10.9891L9.49812 2.625H2.87L11.5605 15.2731L2.87 25.375H4.8335L12.432 16.5419L18.501 25.375H25.13L16.1175 12.2579ZM13.4277 15.3843L12.5475 14.1251L5.54137 4.10375H8.5575L14.2117 12.1914L15.092 13.4505L22.442 23.9636H19.4259L13.4286 15.3851L13.4277 15.3843Z" fill="#E58E1A"/>
+                            </svg>
+                            </a>
+                        <a href="#"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.111 3H5.889C4.294 3 3 4.293 3 5.889V26.111C3 27.706 4.293 29 5.889 29H26.111C27.706 29 29 27.707 29 26.111V5.889C29 4.294 27.707 3 26.111 3ZM10.861 25.389H6.984V12.87H10.861V25.389ZM8.904 11.231C7.637 11.231 6.611 10.197 6.611 8.921C6.611 7.645 7.637 6.611 8.904 6.611C10.171 6.611 11.196 7.645 11.196 8.921C11.196 10.197 10.17 11.231 8.904 11.231ZM25.389 25.389H21.531V18.818C21.531 17.016 20.846 16.009 19.42 16.009C17.869 16.009 17.058 17.057 17.058 18.818V25.389H13.34V12.87H17.058V14.556C17.058 14.556 18.176 12.487 20.833 12.487C23.49 12.487 25.389 14.108 25.389 17.462V25.389Z" fill="#E58E1A"/>
+                            </svg>
+                            </a>
+                        <a href="#"><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.4997 25.6663H17.4997C23.333 25.6663 25.6663 23.333 25.6663 17.4997V10.4997C25.6663 4.66634 23.333 2.33301 17.4997 2.33301H10.4997C4.66634 2.33301 2.33301 4.66634 2.33301 10.4997V17.4997C2.33301 23.333 4.66634 25.6663 10.4997 25.6663Z" stroke="#E58E1A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M13.9993 18.0827C16.2545 18.0827 18.0827 16.2545 18.0827 13.9993C18.0827 11.7442 16.2545 9.91602 13.9993 9.91602C11.7442 9.91602 9.91602 11.7442 9.91602 13.9993C9.91602 16.2545 11.7442 18.0827 13.9993 18.0827Z" stroke="#E58E1A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M20.5752 8.16602H20.5868" stroke="#E58E1A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            </a>
+                    </div>
+                </div>
 
+                <div class="footer-center">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Groundwork</a></li>
+                        <li><a href="#">Transport</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-right">
+                    <h3>Contact Info</h3>
+                    <p><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13 2.25C12.5858 2.25 12.25 2.58579 12.25 3C12.25 3.41421 12.5858 3.75 13 3.75C13.9521 3.75 14.8948 3.93753 15.7745 4.30187C16.6541 4.66622 17.4533 5.20025 18.1265 5.87348C18.7997 6.5467 19.3338 7.34593 19.6981 8.22554C20.0625 9.10516 20.25 10.0479 20.25 11C20.25 11.4142 20.5858 11.75 21 11.75C21.4142 11.75 21.75 11.4142 21.75 11C21.75 9.85093 21.5237 8.71312 21.0839 7.65152C20.6442 6.58992 19.9997 5.62533 19.1872 4.81282C18.3747 4.0003 17.4101 3.35578 16.3485 2.91605C15.2869 2.47633 14.1491 2.25 13 2.25ZM21 19V17.3541C21 16.5363 20.5021 15.8008 19.7428 15.4971L17.7086 14.6835C16.7429 14.2971 15.6422 14.7156 15.177 15.646L15 16C15 16 12.5 15.5 10.5 13.5C8.5 11.5 8 9 8 9L8.35402 8.82299C9.28438 8.35781 9.70285 7.25714 9.31654 6.29136L8.50289 4.25722C8.19916 3.4979 7.46374 3 6.64593 3H5C3.89543 3 3 3.89543 3 5C3 13.8366 10.1634 21 19 21C20.1046 21 21 20.1046 21 19ZM12.25 7C12.25 6.58579 12.5858 6.25 13 6.25C13.6238 6.25 14.2414 6.37286 14.8177 6.61157C15.394 6.85028 15.9177 7.20016 16.3588 7.64124C16.7998 8.08232 17.1497 8.60596 17.3884 9.18225C17.6271 9.75855 17.75 10.3762 17.75 11C17.75 11.4142 17.4142 11.75 17 11.75C16.5858 11.75 16.25 11.4142 16.25 11C16.25 10.5732 16.1659 10.1506 16.0026 9.75628C15.8393 9.36197 15.5999 9.00369 15.2981 8.7019C14.9963 8.40011 14.638 8.16072 14.2437 7.99739C13.8494 7.83406 13.4268 7.75 13 7.75C12.5858 7.75 12.25 7.41421 12.25 7Z" fill="white"/>
+                        </svg>
+                         +1 234 567890</p>
+                    <p><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99982 3C3.79068 3 1.99982 4.79086 1.99982 7V17C1.99982 19.2091 3.79068 21 5.99982 21H17.9998C20.2089 21 21.9998 19.2091 21.9998 17V7C21.9998 4.79086 20.2089 3 17.9998 3H5.99982ZM6.41585 7.37592C6.0712 7.14616 5.60555 7.23929 5.37579 7.58393C5.14602 7.92858 5.23915 8.39423 5.5838 8.624L9.365 11.1448C10.9605 12.2085 13.0391 12.2085 14.6346 11.1448L18.4158 8.624C18.7605 8.39423 18.8536 7.92858 18.6238 7.58393C18.3941 7.23929 17.9284 7.14616 17.5838 7.37592L13.8026 9.89672C12.7109 10.6245 11.2887 10.6245 10.197 9.89672L6.41585 7.37592Z" fill="white"/>
+                        </svg>
+                         mail@pietersbvgrondwerken.com</p>
+                    <p> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M14.6523 3.57693C13.4199 2.34449 11.3126 3.21735 11.3126 4.96028C11.3126 5.47914 11.1065 5.97674 10.7396 6.34363L9.11887 7.96433C8.75198 8.33122 8.25438 8.53733 7.73552 8.53733C5.99259 8.53733 5.11972 10.6446 6.35216 11.877L8.72844 14.2533L3.21088 19.7709C2.92971 20.0521 2.92971 20.5079 3.21088 20.7891C3.49206 21.0703 3.94794 21.0703 4.22912 20.7891L9.74668 15.2716L12.1229 17.6478C13.3554 18.8802 15.4626 18.0074 15.4626 16.2645C15.4626 15.7456 15.6688 15.248 16.0357 14.8811L17.6564 13.2604C18.0232 12.8935 18.5209 12.6874 19.0397 12.6874C20.7826 12.6874 21.6555 10.5801 20.4231 9.34768L14.6523 3.57693Z" fill="white"/>
+                        </svg>
+                        West Avenue, Square Park, Finland</p>
+                    <p> <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11.9998 2.50049C6.48982 2.50049 1.99982 6.99049 1.99982 12.5005C1.99982 18.0105 6.48982 22.5005 11.9998 22.5005C17.5098 22.5005 21.9998 18.0105 21.9998 12.5005C21.9998 6.99049 17.5098 2.50049 11.9998 2.50049ZM16.3498 16.0705C16.2098 16.3105 15.9598 16.4405 15.6998 16.4405C15.5698 16.4405 15.4398 16.4105 15.3198 16.3305L12.2198 14.4805C11.4498 14.0205 10.8798 13.0105 10.8798 12.1205V8.02049C10.8798 7.61049 11.2198 7.27049 11.6298 7.27049C12.0398 7.27049 12.3798 7.61049 12.3798 8.02049V12.1205C12.3798 12.4805 12.6798 13.0105 12.9898 13.1905L16.0898 15.0405C16.4498 15.2505 16.5698 15.7105 16.3498 16.0705Z" fill="white"/>
+                        </svg>
+                        Monday - Friday<br> 09:00 AM - 06:00 PM</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                © 2025 Grondwerken Pieters. All rights reserved.
+            </div>
+        </footer>
+    </section>
+    <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
     <script src="./assets/js/app.js"></script>
 </body>
 
